# niceml-dashboard

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml
.github/workflows/: test.yaml
nicemldashboard/: State.py  dashboard.py  exceptions.py
nicemldashboard/State/: State.py  appstate.py
nicemldashboard/assets/: style.scss
nicemldashboard/basecomponents/: sidebar.py  table.py
nicemldashboard/basecomponents/buttons/: sidebarbutton.py  sidebartogglebutton.py
nicemldashboard/experiment/: experiment.py  experiment_manager.py  experimentmanager.py  type.py  utils.py
nicemldashboard/experimentdetails/: experimentdetailcomponent.py  mainframe.py
nicemldashboard/experimentdetails/components/: meta.py  metric.py
nicemldashboard/loader/: dataframeloader.py  experimentloader.py  imageloader.py
nicemldashboard/pages/: home.py  navigable.py
nicemldashboard/state/: appstate.py
nicemldashboard/utils/: exceptions.py  settings.py
tests/unit/nicemldashboard/basecomponents/: test_buttons.py
tests/unit/nicemldashboard/experiment/: test_experiment.py  test_experiment_manager.py  test_type.py  testexperimentmanager.py
tests/unit/nicemldashboard/experiment/loader/: conftest.py  test_data_frame_loader.py  test_experimentloader.py  test_imageloader.py
tests/unit/nicemldashboard/utils/: test_settings.py
